--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import-normalize;
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
@@ -22,4 +23,15 @@ code {
 
 .content-wrapper {
   display: flex;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
