--- a/src/pages/Profil/index.css
+++ b/src/pages/Profil/index.css
@@ -1,3 +1,96 @@
+.profil-container {
+  margin: 68px 90px 86px 107px;
+}
+
+.profil-header {
+  color: #000000;
+  font-style: normal;
+  line-height: 24px;
+  font-weight: 500;
+}
+.profil-header-hello {
+  font-size: 48px;
+}
+
+.profil-header-hello .text-red {
+  color: #ff0101;
+}
+
+.profil-header-congrats {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.profil-content {
+  margin-top: 77px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 31px;
+}
+
+.profil-content-charts {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.profil-content-primary {
+  display: flex;
+  flex-direction: row;
+}
+.profil-content-secondary {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.profil-content-activity {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 835px;
+  height: 320px;
+  border-radius: 5px;
+  background-color: #fbfbfb;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.02);
+}
+
+.profil-content-session {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 258px;
+  height: 263px;
+  border-radius: 5px;
+  background-color: #f00000;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.02);
+}
+.profil-content-performance {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 258px;
+  height: 263px;
+  border-radius: 5px;
+  background-color: #282d30;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.02);
+}
+
+.profil-content-goal {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 258px;
+  height: 263px;
+  border-radius: 5px;
+  background-color: #fbfbfb;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.02);
+}
+
 .profil-key-data {
   display: flex;
   flex-direction: column;
