--- a/src/components/Session/style.css
+++ b/src/components/Session/style.css
@@ -1,7 +1,7 @@
 .session-container {
   width: 258px;
   height: 263px;
-  background-color: #f00000;
+  background-color: rgb(240, 0, 0);
   border-radius: 5px;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.02);
 }
@@ -18,4 +18,15 @@
   font-weight: 500;
   line-height: 24px;
   opacity: 0.504;
+}
+
+.session-custom-tooltip {
+  padding: 1px 7px;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 8px;
+  font-weight: 700;
+  text-align: center;
+  font-style: normal;
+  line-height: 24px;
 }
