--- a/src/components/KeyDataCard/keydatacard.css
+++ b/src/components/KeyDataCard/keydatacard.css
@@ -22,7 +22,6 @@
   font-size: 20px;
   font-style: normal;
   font-weight: 700;
-  line-height: 24px;
 }
 
 .mini-card-smalltext {
@@ -30,5 +29,11 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
-  line-height: 24px;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media screen and (max-width: 992px) {
+  .mini-card {
+    width: 100%;
+  }
 }
