--- a/src/components/Session/session.css
+++ b/src/components/Session/session.css
@@ -1,6 +1,6 @@
 .session-container {
-  width: 258px;
-  height: 263px;
+  /* width: 258px;
+  height: 263px; */
   background-color: rgb(240, 0, 0);
   border-radius: 5px;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.02);
