--- a/src/components/Welcome/welcome.css
+++ b/src/components/Welcome/welcome.css
@@ -1,7 +1,6 @@
 .profil-header {
   color: #000000;
   font-style: normal;
-  line-height: 24px;
   font-weight: 500;
 }
 .profil-header-hello {
@@ -15,4 +14,15 @@
 .profil-header-congrats {
   font-size: 18px;
   font-weight: 400;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media screen and (max-width: 992px) {
+  .profil-header-hello {
+    font-size: 24px;
+  }
+
+  .profil-header-congrats {
+    font-size: 14px;
+  }
 }
